--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,19 +48,12 @@ ul {
 a {
     margin: 0;
 }
-/*a {*/
-/*    text-decoration: none;*/
-/*    margin-bottom: 13px;*/
-/*    margin-left: 16px;*/
-/*}*/
+
 .recipes-section {
-    border: 2px solid red;
-    background: #EDEDED;
-    padding: 102px
 }
 
 #recipes-container {
-
+    margin: 0 50px;
 }
 
 .recipe-item {
@@ -310,4 +303,39 @@ li {
     left: 0;
     top: 34px;
     padding: 0 30px;
+}
+
+.tag {
+    border-radius: 10px;
+    background: #FFD15B;
+    padding: 17px 18px;
+}
+
+#tags-container {
+}
+
+#tags-list-container {
+    display: flex;
+    gap: 20px;
+    margin: 0 62px;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tutu {
+    display: flex;
+    align-items: center;
+    flex-basis: 70%;
+    margin: 50px 0;
+    justify-content: space-between;
+}
+
+.recipes-number {
+    color: #1B1B1B;
+    font-family: Anton;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
