--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,6 +50,7 @@ a {
 }
 
 .recipes-section {
+    background: #EDEDED;
 }
 
 #recipes-container {
@@ -71,10 +72,24 @@ a {
     border-top-right-radius: 10px;
     width: 100%;
     max-width: 100%;
-    height: 33%;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    /*background: url('../images/Recette01.jpg'), lightgray 50% / cover no-repeat;*/
+}
+
+.img-container {
+    position: relative;
+    height: 33%;
+}
+
+.img-badge {
+    border-radius: 14px;
+    background: #FFD15B;
+    padding: 5px 15px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 22px;
 }
 
 .toto {
@@ -122,46 +137,14 @@ a {
     gap: 48px
 }
 
-.flex {
+.quantity {
     display: flex;
+    gap:5px
 }
 
 .text-left {
     text-align: left;
 }
-
-/*#dropdowns {*/
-/*    display: flex;*/
-/*    gap: 66px;*/
-/*    padding-left: 12px;*/
-/*}*/
-
-/*.dropdown-toggle {*/
-/*    color: #1B1B1B;*/
-/*    font-family: Manrope;*/
-/*    font-size: 16px;*/
-/*    font-style: normal;*/
-/*    font-weight: 500;*/
-/*    line-height: normal;*/
-/*    border-radius: 10px;*/
-/*    background: #FFF;*/
-/*    padding: 17px 16px;*/
-/*    width: 195px;*/
-/*}*/
-
-/*.dropdown-menu {*/
-/*    width: 195px;*/
-/*    border-top-right-radius: 0;*/
-/*    border-top-left-radius: 0;*/
-/*}*/
-
-/*#dropdownMenuButton[aria-expanded="true"] {*/
-/*    background-color: #FFF;*/
-/*    border: none;*/
-/*    border-bottom-left-radius: 0;*/
-/*    border-bottom-right-radius: 0;*/
-/*    margin-bottom: 0;*/
-/*}*/
 
 .dropdown-item-container {
     position: relative;
@@ -247,13 +230,32 @@ li {
     width: 250px;
     border-bottom-left-radius: 11px;
     border-bottom-right-radius: 11px;
-    padding: 10px;
+    z-index: 1;
 }
 
-/*.dropdown-input-field:focus {*/
-/*    outline: none !important;*/
-/*    padding: 5px;*/
-/*}*/
+.tags-list li {
+    padding: 9px 16px;
+}
+
+.tags-list li a {
+    color: #1B1B1B;
+    font-family: Manrope;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.tags-list li:hover {
+    background: #FFD15B;
+    cursor: pointer;
+}
+
+.tags-list li:last-child:hover {
+
+    border-bottom-left-radius: 11px;
+    border-bottom-right-radius: 11px;
+}
 
 .hidden {
     display: none;
@@ -309,9 +311,18 @@ li {
     border-radius: 10px;
     background: #FFD15B;
     padding: 17px 18px;
+    min-width: 141px;
+    width: fit-content;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #tags-container {
+    margin: 0 62px 50px 62px;
+    display: flex;
+    gap: 10px;
 }
 
 #tags-list-container {
@@ -338,4 +349,63 @@ li {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.closing-icon:hover {
+    cursor: pointer;
+}
+
+.img-container {
+    position: relative;
+}
+
+.main-input-container {
+    width: 100%;
+    height: 72px;
+    border-radius: 11px;
+    background: #FFF;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+#close-icon-main-input:hover {
+    cursor: pointer;
+}
+
+.input {
+    outline: none;
+    width: 80%;
+    height: 100%;
+    /*border-top-left-radius: 11px;*/
+    /*border-bottom-left-radius: 11px;*/
+    padding-left: 10px;
+    border: none;
+}
+
+.input::placeholder {
+    color: #7A7A7A;
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.icons {
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#no-recipes-section {
+    /*display: none;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #EDEDED;
+    height: 60vh;
 }
