--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,11 @@
 @import './hero.css';
 @import './tags-input.css';
+@import './recipes.css';
+@import './tags.css';
+@import './inputs.css';
+@import './images.css';
+@import './dropdown.css';
+@import './utils.css';
 
 *,
 *::before,
@@ -46,51 +52,12 @@ ul {
     padding: 0;
 }
 
+li {
+    list-style: none;
+}
+
 a {
     margin: 0;
-}
-
-.recipes-section {
-    background: #EDEDED;
-}
-
-#recipes-container {
-    margin: 0 50px;
-}
-
-.recipe-item {
-    background: #FFFFFF;
-    min-height: 200px;
-    border-radius: 10px;
-    box-shadow: 0 4px 34px 30px rgba(0, 0, 0, 0.04);
-    height: 731px;
-  }
-
-.recipe-item-image{
-    -moz-border-radius-topleft: 10px;
-    -moz-border-radius-topright: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.img-container {
-    position: relative;
-    height: 33%;
-}
-
-.img-badge {
-    border-radius: 14px;
-    background: #FFD15B;
-    padding: 5px 15px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 22px;
 }
 
 .toto {
@@ -112,10 +79,6 @@ a {
     line-height: normal;
 }
 
-.tata {
-    font-weight: 500;
-}
-
 .ingredient {
     color:#1B1B1B;
     font-family: Manrope, sans-serif;
@@ -127,266 +90,10 @@ a {
     display: inline-block;
 }
 
-.clamped-content {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    -webkit-line-clamp: 3;
-}
-
-.gap {
-    gap: 48px
-}
-
-.quantity {
-    display: flex;
-    gap:5px
-}
-
-.text-left {
-    text-align: left;
-}
-
-.dropdown-item-container {
-    position: relative;
-    background: #FFF;
-    border-right: 1px;
-    padding: 10px;
-    border-radius: 11px;
-    margin-right: 40px;
-    width: 250px;
-    height: 50px;
-}
-
-.dropdown-item-ingredients {
-    color: #1B1B1B;
-    font-family: Manrope, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    margin-bottom: 13px;
-    margin-left: 16px;
-}
-
-.dropdown-item-appliances {
-    color: #1B1B1B;
-    font-family: Manrope, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    margin-bottom: 13px;
-    margin-left: 16px;
-}
-
-.dropdown-item-ustensils {
-    color: #1B1B1B;
-    font-family: Manrope, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    margin-bottom: 13px;
-    margin-left: 16px;
-}
-
-li {
-    list-style: none;
-}
-
-.dropdown-item-ingredients:hover {
-    cursor: pointer;
-}
-
-.dropdown-input-container {
-    margin: 0 11px 11px 11px;
-    border: 1px solid #C6C6C6;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.tags-list {
-    position: absolute;
-    background: #FFF;
-    top: 148px;
-    left: 0;
-    width: 250px;
-    border-bottom-left-radius: 11px;
-    border-bottom-right-radius: 11px;
-    z-index: 1;
-    max-height: 200px;
-    height: fit-content;
-    overflow: scroll;
-}
-
-.tags-list li {
-    padding: 9px 16px;
-}
-
-.tags-list li a {
-    color: #1B1B1B;
-    font-family: Manrope;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.tags-list li:hover {
-    background: #FFD15B;
-    cursor: pointer;
-}
-
-.tags-list li:last-child:hover {
-
-    border-bottom-left-radius: 11px;
-    border-bottom-right-radius: 11px;
-}
-
-.hidden {
-    display: none;
-}
-
-.visible {
-    display: block;
-}
-
-.reset-icon:hover {
-    cursor: pointer;
-}
-
-.cursor-pointer:hover {
-    cursor: pointer;
-}
-
-
-.input-container {
-    display: flex;
-    flex-direction: column;
-    background: #FFF;
-}
-
-.header-input-container {
-    display: flex;
-    justify-content: space-around;
-}
-
-.visible {
-    display: block;
-}
-
-.arrow:hover {
-    cursor: pointer;
-}
-
-.hidden {
-    display: none;
-}
-
-.tag {
-    border-radius: 10px;
-    background: #FFD15B;
-    padding: 17px 18px;
-    min-width: 141px;
-    width: fit-content;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#tags-container {
-    margin: 0 62px 50px 62px;
-    display: flex;
-    gap: 10px;
-}
-
-#tags-list-container {
-    display: flex;
-    gap: 20px;
-    margin: 0 62px;
-    position: relative;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .tutu {
     display: flex;
     align-items: center;
     flex-basis: 70%;
     margin: 50px 0;
     justify-content: space-between;
-}
-
-.recipes-number {
-    color: #1B1B1B;
-    font-family: Anton;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.closing-icon:hover {
-    cursor: pointer;
-}
-
-.img-container {
-    position: relative;
-}
-
-.main-input-container {
-    width: 100%;
-    height: 72px;
-    border-radius: 11px;
-    background: #FFF;
-    gap: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-}
-
-#close-icon-main-input:hover {
-    cursor: pointer;
-}
-
-.input {
-    outline: none;
-    width: 80%;
-    height: 100%;
-    /*border-top-left-radius: 11px;*/
-    /*border-bottom-left-radius: 11px;*/
-    padding-left: 10px;
-    border: none;
-}
-
-.input::placeholder {
-    color: #7A7A7A;
-    font-family: Manrope, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.icons {
-    gap: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#no-recipes-section {
-    /*display: none;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #EDEDED;
-    height: 60vh;
 }
