--- a/assets/css/tags-input.css
+++ b/assets/css/tags-input.css
@@ -1,4 +1,6 @@
-#close-icon-appliance-tag-input:hover {
+#close-icon-appliance-tag-input:hover,
+#close-icon-ingredient-tag-input,
+#close-icon-ustensil-tag-input{
     cursor: pointer;
 }
 
@@ -22,7 +24,11 @@
     position: absolute;
     left: 0;
     top: 34px;
-    padding: 0;
+}
+
+.p-20-h-150 {
+    padding: 20px;
+    height: 150px;
 }
 
 .azy {
