--- a/assets/css/tags-input.css
+++ b/assets/css/tags-input.css
@@ -24,6 +24,9 @@
     position: absolute;
     left: 0;
     top: 34px;
+    border-bottom-left-radius: 11px;
+    border-bottom-right-radius: 11px;
+    z-index: 1;
 }
 
 .p-20-h-150 {
